--- a/www/index.html
+++ b/www/index.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Test Game</title>
+<html lang="en">
 
-		<script type="text/javascript" src="js/phaser.min.js"></script>
-		<script type="text/javascript" src="js/Test.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="js/phaser.min.js"></script>
+    <title>Advance Wars Phaser 3</title>
+</head>
 
+<body>
+    <script src="js/Main.js"></script>
+    
+</body>
 
-		<!--<script type="text/javascript" src="js/phaser.js"></script>
-		<script type="text/javascript" src="js/Boot.js"></script>
-		<script type="text/javascript" src="js/Preload.js"></script>
-		<script type="text/javascript" src="js/MainMenu.js"></script>
-		<script type="text/javascript" src="js/Game.js"></script>-->
-
-		<style>
-			body {
-				padding: 0px;
-				margin: 0px;
-			}
-		</style>
-	</head>
-
-	<body>
-		<script type="text/javascript" src ="js/main.js"></script>
-	</body>
 </html>
