--- a/www/index.html
+++ b/www/index.html
@@ -4,24 +4,16 @@
 		<title>Test Game</title>
 
 		<script type="text/javascript" src="js/phaser.min.js"></script>
-		<script type="text/javascript" src="js/Test.js"></script>
-
-
-		<!--<script type="text/javascript" src="js/phaser.js"></script>
-		<script type="text/javascript" src="js/Boot.js"></script>
-		<script type="text/javascript" src="js/Preload.js"></script>
-		<script type="text/javascript" src="js/MainMenu.js"></script>
-		<script type="text/javascript" src="js/Game.js"></script>-->
+		<script type="text/javascript" src="js/Test2.js"></script>
+		<script type="text/javascript" src="js/Unit.js"></script>
+		<script type="text/javascript" src="js/Movement.js"></script>
+		<script type="text/javascript" src="js/ITile.js"></script>
 
 		<style>
-			body {
-				padding: 0px;
-				margin: 0px;
-			}
+
 		</style>
 	</head>
 
 	<body>
-		<script type="text/javascript" src ="js/main.js"></script>
 	</body>
 </html>
