--- a/www/index.html
+++ b/www/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Test Game</title>
+		<title>Strategy Template</title>
 
-		<script type="text/javascript" src="js/phaser.min.js"></script>
-		<script type="text/javascript" src="js/Test.js"></script>
-
-
-		<!--<script type="text/javascript" src="js/phaser.js"></script>
+		<script type="text/javascript" src="js/phaser.js"></script>
 		<script type="text/javascript" src="js/Boot.js"></script>
 		<script type="text/javascript" src="js/Preload.js"></script>
 		<script type="text/javascript" src="js/MainMenu.js"></script>
-		<script type="text/javascript" src="js/Game.js"></script>-->
+		<script type="text/javascript" src="js/Game.js"></script>
 
 		<style>
 			body {
