--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
 	<title>JS Wars</title>
 
 		<script type="text/javascript" src="js/phaser.js"></script>
+		<script  src="/socket.io/socket.io.js"></script>
+		<script src="js/client.js"></script>
 		<script type="text/javascript" src="js/Boot.js"></script>
 		<script type="text/javascript" src="js/Preload.js"></script>
 		<script type="text/javascript" src="js/Game.js"></script>
