Code cleanup, comments

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
-	<title>JS Wars</title>
+	<link rel="shortcut icon" href="assets/images/icon.png" />
+	<title>JSWars</title>
 
 		<script type="text/javascript" src="js/phaser.js"></script>
 		<script  src="/socket.io/socket.io.js"></script>
